fix: make player z-index one lower than nav to make tooltips appear on top

--- a/src/components/player/Player.css
+++ b/src/components/player/Player.css
@@ -2,7 +2,7 @@
   position: fixed;
   left: 5rem;
   right: 0;
-  z-index: 9999;
+  z-index: 9998;
   background-color: hsl(from var(--clr-neutral-900) h s l / 0.8);
 
   backdrop-filter: blur(4px);
